# avalon-template-ex

./: .gitignore  README-startup.md  README.md  operations-log.md  verification.md
.codex/: review-report-node-online.md  review-report.md  testing.md
admin/: .env.development  CHANGELOG.md  README.md  index.html  pnpm-lock.yaml
admin/src/: App.vue
backend/: CHANGELOG.md  README.md  pom.xml
backend-go/: go.mod  go.sum
backend-go/docs/: docs.go  swagger.json  swagger.yaml
backend-java/continew-webapi/: pom.xml
backend-node/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend-node/prisma/: schema.prisma
backend-node/src/: main.ts
backend-php/: composer.json
backend-php/public/: index.php
backend-python/: main.py  requirements.txt
backend-python/app/: __init__.py  api_response.py  config.py  db.py  id_generator.py  logging_middleware.py  main.py  redis_client.py
backend-rust/: Cargo.toml
backend-rust/src/: config.rs  db.rs  id.rs  main.rs
backend-rust/src/application/: auth.rs
backend-rust/src/interfaces/http/: auth_handler.rs  captcha_handler.rs  common_handler.rs  mod.rs  response.rs  system_role_handler.rs  system_user_handler.rs  user_handler.rs
backend-rust/src/security/: jwt.rs  mod.rs  password.rs  rsa.rs
backend/continew-extension/: pom.xml
go-backend/: go.mod
java-backend/: pom.xml
next-admin/: .gitignore  pnpm-lock.yaml  tsconfig.json
next-admin/app/: layout.tsx
pc-admin-nextjs/: package.json
pc-admin-vue3/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
pc-vue3-admin/: vite.config.ts
(+487 files in other folders)
