[package]
name = "voc-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15"
jsonwebtoken = "9"
bcrypt = "0.15"
rsa = { version = "0.9", features = ["pkcs8"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
anyhow = "1.0"

